# Shipyard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_projects.bat
shipyard/: CMakeLists.txt
shipyard-viewer/: CMakeLists.txt  main_win32.cpp
shipyard-viewer/approot/: .gitignore
shipyard-viewer/approot/shaders/: error.fx  fullscreenhelperutils.hlsl  generic.fx  imgui.fx  test.hlsl  test2.hlsl  test3.hlsl  vertexformatutils.hlsl
shipyard-viewer/framework/: shipyardviewer.cpp  shipyardviewer.h  shipyardviewerlibprecomp.cpp  shipyardviewerlibprecomp.h
shipyard-viewer/shaders/: error.fx  generic.fx
shipyard-viewer/src/: main_win32.cpp  shipyardviewerprecomp.cpp  shipyardviewerprecomp.h
shipyard-viewer/src/framework/: shipyardviewer.cpp  shipyardviewer.h
shipyard/common/: common.cpp  common.h  dummy.cpp  dummy.h  shaderdatabase.cpp  shaderdatabase.h  shaderfamilies.cpp  shaderhandler.cpp  shaderhandler.h  shaderhandlermanager.cpp  shaderhandlermanager.h  shaderkey.cpp  shaderkey.h  shaderoptions.cpp  shaderoptions.h  vertexformat.cpp  vertexformat.h
shipyard/common/shadercompiler/: renderstateblockcompiler.cpp  renderstateblockcompiler.h  shadercompiler.cpp  shadercompiler.h  shaderwatcher.cpp  shaderwatcher.h
shipyard/common/wrapper/: buffer.cpp  buffer.h  descriptorset.cpp  descriptorset.h  device.h  gfxresource.cpp  gfxresource.h  pipelinestateobject.cpp  pipelinestateobject.h  renderdevice.h  renderdevicecontext.cpp  renderdevicecontext.h  rendertarget.cpp  rendertarget.h  rootsignature.cpp  rootsignature.h  shader.cpp  shader.h  texture.cpp  texture.h  viewsurface.cpp  viewsurface.h  wrapper.h  wrapper_common.h
shipyard/common/wrapper/dx11/: dx11_common.cpp  dx11_common.h  dx11buffer.cpp  dx11buffer.h  dx11descriptorset.cpp  dx11descriptorset.h  dx11pipelinestateobject.cpp  dx11pipelinestateobject.h  dx11renderdevice.cpp  dx11renderdevice.h  dx11renderdevicecontext.cpp  dx11renderdevicecontext.h  dx11renderstatecache.cpp  dx11renderstatecache.h  dx11rendertarget.cpp  dx11rendertarget.h  dx11rootsignature.cpp  dx11rootsignature.h  dx11shader.cpp  dx11shader.h  dx11texture.cpp  dx11texture.h  dx11viewsurface.cpp  dx11viewsurface.h
shipyard/graphics/: defaulttextures.cpp  defaulttextures.h  graphicscommon.cpp  graphicscommon.h  graphicsconfig.h  graphicsprecomp.h  graphicssingleton.h  graphicssingletonstorer.cpp  graphicssingletonstorer.h  graphicstypes.h  graphicsutilities.cpp  rendercontext.cpp  rendercontext.h  renderer.cpp  renderer.h  rendergraph.cpp  rendergraph.h  shaderdatabase.cpp  shaderdatabase.h  shaderfamilies.cpp  shaderfamilies.h  shaderhandler.cpp  shaderhandler.h  shaderhandlermanager.cpp  shaderhandlermanager.h  shaderkey.cpp  shaderkey.h  shaderkeydefinitions.h  shaderoptions.cpp  shaderoptions.h  shipyardimgui.cpp  shipyardimgui.h  vertexformat.cpp  vertexformat.h
shipyard/graphics/material/: gfxmaterial.cpp  gfxmaterial.h  gfxmaterialunifiedconstantbuffer.cpp  gfxmaterialunifiedconstantbuffer.h  materialunifiedconstantbuffer.cpp  materialunifiedconstantbuffer.h
shipyard/graphics/mesh/: gfxmesh.cpp  gfxmesh.h
shipyard/graphics/renderpass/: imguirenderpass.cpp  imguirenderpass.h  renderpass.cpp  renderpass.h  renderpasshandle.cpp  renderpasshandle.h
shipyard/graphics/shader/: shaderdatabase.cpp  shaderdatabase.h  shaderfamilies.cpp  shaderfamilies.h  shaderhandler.cpp  shaderhandler.h  shaderhandlermanager.cpp  shaderhandlermanager.h  shaderinputprovider.cpp  shaderinputprovider.h  shaderinputprovider.inl  shaderkey.cpp  shaderkey.h  shaderkeydefinitions.h  shaderoptiondefinitions.h  shaderoptions.cpp  shaderoptions.h  shaderresourcebinder.cpp  shaderresourcebinder.h  shadervariationset.h  shadervariationsetmanager.cpp  shadervariationsetmanager.h  shadervertexformatgenerator.cpp  shadervertexformatgenerator.h
shipyard/graphics/shadercompiler/: renderstateblockcompiler.cpp  renderstateblockcompiler.h  samplerstatecompiler.cpp  samplerstatecompiler.h  shadercompiler.cpp  shadercompiler.h  shadercompilerutilities.cpp  shadercompilerutilities.h  shadercompilerutilities.inl  shadercompilerwin.cpp  shaderwatcher.cpp  shaderwatcher.h
shipyard/graphics/utils/: fullscreenhelper.cpp  fullscreenhelper.h
shipyard/graphics/wrapper/: buffer.cpp  buffer.h  commandlist.cpp  commandlist.h  commandlistallocator.cpp  commandlistallocator.h  commandqueue.cpp  commandqueue.h  descriptorset.cpp  descriptorset.h  gfxresource.cpp  gfxresource.h  pipelinestateobject.cpp  pipelinestateobject.h  rendercommands.h  renderdevice.h  renderdevicecontext.cpp  renderdevicecontext.h  rendertarget.cpp  rendertarget.h  rootsignature.cpp  rootsignature.h  sampler.cpp  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h  viewsurface.cpp  viewsurface.h  wrapper.h  wrapper_common.h
shipyard/graphics/wrapper/dx11/: dx11_common.cpp  dx11_common.h  dx11buffer.cpp  dx11buffer.h  dx11commandlist.cpp  dx11commandlist.h  dx11commandlistallocator.cpp  dx11commandlistallocator.h  dx11commandqueue.cpp  dx11commandqueue.h  dx11descriptorset.cpp  dx11descriptorset.h  dx11pipelinestateobject.cpp  dx11pipelinestateobject.h  dx11renderdevice.cpp  dx11renderdevice.h  dx11renderdevicecontext.cpp  (+15 more)
shipyard/math/: dummy.cpp  mathprecomp.cpp  mathprecomp.h  mathtypes.h  mathutilities.h
shipyard/system/: array.h  atomicoperations.cpp  atomicoperations.h  bitfield.h  common.h  datapool.h  logger.cpp  logger.h  memory.cpp  memory.h  pathutils.cpp  pathutils.h  platform.h  singleton.h  singletonstorer.cpp  singletonstorer.h  string.cpp  string.h  string.inl  systemcommon.cpp  systemcommon.h  systemdebug.h  systemprecomp.cpp  systemprecomp.h
shipyard/system/memory/: baseallocator.h  debugallocator.cpp  debugallocator.h  fixedheapallocator.cpp  fixedheapallocator.h  linearallocator.cpp  linearallocator.h  memoryutils.h  poolallocator.cpp  poolallocator.h
shipyard/system/wrapper/: filehandler.cpp  filehandler.h  wrapper.h  wrapper_common.h
shipyard/tools/: meshimporter.cpp  meshimporter.h  textureimporter.cpp  textureimporter.h  toolsprecomp.cpp  toolsprecomp.h
(+37 files in other folders)
